--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "fresh-brick",
    "metadata": {},
    "outputs": [],
@@ -24,8 +24,20 @@
     "from scipy import optimize\n",
     "from IPython.display import display\n",
     "from ipywidgets import interact, fixed\n",
-    "import model_code_Final2\n",
+    "import modelproject as model_code_Final2\n",
     "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3085e4f3-8c27-4b15-bed8-29b209ad36b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -179,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "average-vatican",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'model_code_Final2' from 'C:\\\\Users\\\\jacob\\\\OneDrive\\\\Universitet_Okonomi\\\\Programming\\\\Final_barb_rep\\\\group-1\\\\model_code_Final2.py'>"
+       "<module 'modelproject' from 'C:\\\\Users\\\\Asker\\\\OneDrive - Københavns Universitet\\\\Documents\\\\Arbejde\\\\Undervisning\\\\INPA2\\\\Github\\\\Groups\\\\Inaugural-Project-2021_BSJH\\\\modelproject\\\\modelproject.py'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "funny-boards",
    "metadata": {},
    "outputs": [],
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "early-juice",
    "metadata": {},
    "outputs": [],
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "charitable-raise",
    "metadata": {},
    "outputs": [
@@ -308,13 +320,127 @@
        "           0.,     0.])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_code_Final2.h(mock_data,par)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "89d97a8c-696d-435b-aba2-f9b093b5f443",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equation values before calibration: [  125. -1000.    25. -2000.     0.     0.  -125.  -125.  -125.  -125.\n",
+      "     0.     0.  -500.  -500.     0.     0.     0.     0.]\n",
+      "Equation values after calibration: [ 0.00000000e+00  0.00000000e+00 -2.84217094e-14  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "namespace(N=1000,\n",
+       "          w=1,\n",
+       "          EC=0.5,\n",
+       "          EM=0.5,\n",
+       "          EY=0.7,\n",
+       "          theta1=1,\n",
+       "          theta2=1,\n",
+       "          muYL1=0.6666666666666666,\n",
+       "          muYL2=0.6666666666666666,\n",
+       "          muYM1=0.33333333333333337,\n",
+       "          muYM2=0.3333333333333333,\n",
+       "          mux11=0.5,\n",
+       "          mux12=0.5,\n",
+       "          mux21=0.5,\n",
+       "          mux22=0.5,\n",
+       "          gamma1=0.5,\n",
+       "          gamma2=0.5,\n",
+       "          theta1m=1,\n",
+       "          theta2m=1)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_code_Final2.calibrate_2(mock_data, par)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5eb3cd4c-5cdd-4c50-be6b-8a3f10f8ebf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equation values before calibration: [ 0.00000000e+00  0.00000000e+00 -2.84217094e-14  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00]\n",
+      "Equation values after calibration: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "par=model_code_Final2.calibrate_2(mock_data, par)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3e0657ef-2757-481f-849d-c55f5d106a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "namespace(N=1000,\n",
+       "          w=1,\n",
+       "          EC=0.5,\n",
+       "          EM=0.5,\n",
+       "          EY=0.7,\n",
+       "          theta1=1,\n",
+       "          theta2=1,\n",
+       "          muYL1=0.6666666666666666,\n",
+       "          muYL2=0.6666666666666666,\n",
+       "          muYM1=0.3333333333333333,\n",
+       "          muYM2=0.3333333333333333,\n",
+       "          mux11=0.5,\n",
+       "          mux12=0.5,\n",
+       "          mux21=0.5,\n",
+       "          mux22=0.5,\n",
+       "          gamma1=0.5,\n",
+       "          gamma2=0.5,\n",
+       "          theta1m=1,\n",
+       "          theta2m=1)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par"
    ]
   },
   {
@@ -327,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "stone-subdivision",
    "metadata": {},
    "outputs": [
@@ -335,14 +461,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equation values before calibration: [  125. -1000.    25. -2000.     0.     0.  -125.  -125.  -125.  -125.\n",
-      "     0.     0.  -500.  -500.     0.     0.     0.     0.]\n",
+      "Equation values before calibration: [ 0.00000000e+00  0.00000000e+00 -2.84217094e-14  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00]\n",
       "Equation values after calibration: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
     "par=model_code_Final2.calibrate(mock_data, par)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0f775c22-fd58-4946-9019-f50406f0ba05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "namespace(N=1000,\n",
+       "          w=1,\n",
+       "          EC=0.5,\n",
+       "          EM=0.5,\n",
+       "          EY=0.7,\n",
+       "          theta1=1,\n",
+       "          theta2=1,\n",
+       "          muYL1=0.6666666666666666,\n",
+       "          muYL2=0.6666666666666666,\n",
+       "          muYM1=0.3333333333333333,\n",
+       "          muYM2=0.3333333333333333,\n",
+       "          mux11=0.5,\n",
+       "          mux12=0.5,\n",
+       "          mux21=0.5,\n",
+       "          mux22=0.5,\n",
+       "          gamma1=0.5,\n",
+       "          gamma2=0.5,\n",
+       "          theta1m=1,\n",
+       "          theta2m=1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par"
    ]
   },
   {
@@ -355,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "promising-terminal",
    "metadata": {},
    "outputs": [
@@ -366,7 +534,7 @@
        "          1.,  125.,  125.,  125.,  125.,  500.,  500.,    1., 1000.])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "continental-hayes",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13184806acc345ab8b9e1d9bc4508530",
+       "model_id": "8efda9e37e0541ab96dccd3e416cf596",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,10 +612,10 @@
     {
      "data": {
       "text/plain": [
-       "<function model_code_Final2.create_timeseries(EC1, EM1, EY1, x01, parlist)>"
+       "<function modelproject.create_timeseries(EC1, EM1, EY1, x01, parlist)>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,14 +656,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "mysterious-discretion",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c251ff54d8847daad3c26baaf641c15",
+       "model_id": "97eee2779dfb444b97f8cde14aaa03d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,10 +677,10 @@
     {
      "data": {
       "text/plain": [
-       "<function model_code_Final2.graph_consumption(EC1, EM1, EY1, x01, parlist)>"
+       "<function modelproject.graph_consumption(EC1, EM1, EY1, x01, parlist)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +702,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "extraordinary-monaco",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "374315d60c254ff7a0d82b0085fe1048",
+       "model_id": "65ccd3308eee4cd3956b34b52cd15796",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,10 +723,10 @@
     {
      "data": {
       "text/plain": [
-       "<function model_code_Final2.create_timeseries_Y1_Y2(EC1, EM1, EY1, x01, parlist)>"
+       "<function modelproject.create_timeseries_Y1_Y2(EC1, EM1, EY1, x01, parlist)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,14 +747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "fossil-major",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37abcd4685844a9b8c56d935e675dfb7",
+       "model_id": "2fe731fc28364b769a174489f23a20fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,10 +768,10 @@
     {
      "data": {
       "text/plain": [
-       "<function model_code_Final2.create_timeseries_L_M1(EC1, EM1, EY1, x01, parlist)>"
+       "<function modelproject.create_timeseries_L_M1(EC1, EM1, EY1, x01, parlist)>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,14 +793,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "affected-indication",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3067385398ec445399952913c0bf5de6",
+       "model_id": "9faaf809861f464c8181a12c0b6cbd9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,10 +814,10 @@
     {
      "data": {
       "text/plain": [
-       "<function model_code_Final2.graph_x(EC1, EM1, EY1, x01, parlist)>"
+       "<function modelproject.graph_x(EC1, EM1, EY1, x01, parlist)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,14 +883,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "whole-geography",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcbd12d57c664197974866533c1accc3",
+       "model_id": "4b7c138b24b1476e888a37c3b89d2462",
        "version_major": 2,
        "version_minor": 0
       },
@@ -732,23 +900,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function model_code_Final2.create_timeseries_L_M1_g(EC1, EM1, EY1, x01, parlist)>"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "interact(model_code_Final2.create_timeseries_L_M1_g, \n",
     "         EM1=fixed(0.1), \n",
     "         EY1=widgets.FloatSlider(min=0, max=5, step=0.05, value=0.5), \n",
-    "         x01=fixed(mock_data),EC1=fixed(0.1), parlist=fixed(par)) \n"
+    "         x01=fixed(mock_data),EC1=fixed(0.1), parlist=fixed(par));\n"
    ]
   },
   {
@@ -778,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
